[gd_scene load_steps=6 format=3 uid="uid://dri1hy2b0aslg"]

[ext_resource type="Script" uid="uid://ddb2ttqf6r4i1" path="res://scripts/ui/components/UpgradeOfferingCard.gd" id="1_abcde"]
[ext_resource type="Texture2D" uid="uid://c8xmxnwsvsa2v" path="res://assets/art/upgrades/iron_grip.svg" id="2_snmku"]
[ext_resource type="FontFile" uid="uid://dc44o3ilk6crs" path="res://assets/fonts/BrokenConsoleBold.ttf" id="3_p0m88"]
[ext_resource type="FontFile" uid="uid://b87fjwx31kgm0" path="res://assets/fonts/GlitchGoblin.ttf" id="4_gn3pf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card_panel"]
bg_color = Color(0, 1, 1, 0.235294)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0, 0.819608, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(1, 0, 1, 0.6)
shadow_size = 3

[node name="UpgradeOfferingCard" type="PanelContainer"]
offset_right = 290.0
offset_bottom = 140.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_card_panel")
script = ExtResource("1_abcde")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="IconTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("2_snmku")
expand_mode = 1
stretch_mode = 5

[node name="DetailsVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/DetailsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0.819608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_p0m88")
theme_override_font_sizes/font_size = 10

[node name="DescriptionLabel" type="Label" parent="MarginContainer/HBoxContainer/DetailsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0.819608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_p0m88")
theme_override_font_sizes/font_size = 10
autowrap_mode = 3

[node name="EffectLabel" type="Label" parent="MarginContainer/HBoxContainer/DetailsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0.819608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_p0m88")
theme_override_font_sizes/font_size = 10
autowrap_mode = 3

[node name="PurchaseHBox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/DetailsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="CostLabel" type="Label" parent="MarginContainer/HBoxContainer/DetailsVBox/PurchaseHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0.819608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_p0m88")
theme_override_font_sizes/font_size = 10
vertical_alignment = 1

[node name="PurchaseButton" type="Button" parent="MarginContainer/HBoxContainer/DetailsVBox/PurchaseHBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gn3pf")
theme_override_font_sizes/font_size = 11
text = "Acquire"
